# rayscale-ml

./: .env.example  .gitignore  .mypy.ini  Makefile  README.md  cleanup.sh  debug_schema.py  installed_packages.txt  mlflow.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/data/: base.yaml
configs/experiments/: tune.yaml
configs/model/: base.yaml
configs/training/: base.yaml
data/: synthetic_generator.py
data/feature_store/features/v=ce3cdf16/: 5_47ed0a0be85f4ffab14664dee74a3af4_000000_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000001_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000002_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000003_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000004_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000005_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000006_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000007_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000008_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000009_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000010_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000011_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000012_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000013_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000014_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000015_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000016_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000017_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000018_000000-0.parquet  5_47ed0a0be85f4ffab14664dee74a3af4_000019_000000-0.parquet
data/feature_store/metadata/: features_ce3cdf16.json  test_dataset_d90731ba.json
data/feature_store/test_dataset/v=d90731ba/: 127_fa0175194cc141c3a3cd6a3a06885d64_000001_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000002_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000003_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000005_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000006_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000009_000000-0.parquet  127_fa0175194cc141c3a3cd6a3a06885d64_000010_000000-0.parquet  (+43 more)
data/processed/: preprocessor.pkl
data/processed/preprocessed_data.parquet/: 117_98da77a285e244d4aaad238f2496db70_000000_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000001_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000004_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000005_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000006_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000008_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000010_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000011_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000012_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000016_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000017_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000018_000000-0.parquet  117_98da77a285e244d4aaad238f2496db70_000019_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000002_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000003_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000007_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000009_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000013_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000014_000000-0.parquet  8_7538d37610644c9db029bd965f62f1c8_000015_000000-0.parquet
data/raw/: synthetic_data.parquet
experiments/random_forest-20260109_105351/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_143905/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_143905/checkpoint_2026-01-09_14-39-30.733326/: model.pth  optimizer.pth  training_state.pth
experiments/random_forest-20260109_144849/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_144849/checkpoint_2026-01-09_14-49-15.108496/: model.pth  optimizer.pth  training_state.pth
experiments/random_forest-20260109_165825/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_165825/checkpoint_2026-01-09_16-58-50.427144/: model.pth  model_config.json
experiments/random_forest-20260109_200021/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_200021/checkpoint_2026-01-09_20-00-46.969825/: model.pth
experiments/random_forest-20260109_203242/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_203242/checkpoint_2026-01-09_20-33-07.349232/: model.pth
experiments/random_forest-20260109_204336/: checkpoint_manager_snapshot.json
experiments/random_forest-20260109_204336/checkpoint_2026-01-09_20-44-01.764351/: model.pth
output/: metadata.json  metrics.json  random_forest_model.config.json  random_forest_model.pth
scripts/: _path_setup.py  generate_synthetic_data.py  serve_local.py  test_data_loading.py  train_model.py
src/: __init__.py  main.py
src/artifacts/: manager.py  mlflow_client.py
src/config/: __init__.py  constants.py  schema.py  settings.py
src/data/: __init__.py  feature_engineering.py  feature_store.py  preprocessing.py  schemas.py  sources.py  splits.py
src/evaluation/: drift.py
src/features/: base.py  registry.py
src/models/: __init__.py  base.py  registry.py
src/models/architectures/: __init__.py  tabular_nn.py
src/models/trainers/: __init__.py  base_trainer.py  ray_trainer.py  ray_trainer.py.backup_encode
src/serving/: __init__.py  api.py  feature_server.py  models.py  schemas.py  serve_app.py
src/training/: __init__.py  orchestrator.py  train_ray.py  tune_ray.py
src/training/pipelines/: __init__.py  base_pipeline.py  ray_pipeline.py  tune_pipleline.py
src/utils/: __init__.py  logging.py  monitoring.py  mps_utils.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/integrations/: test_serving.py  test_training.py
tests/unit/test_config/: test_settings.py
tests/unit/test_data/: test_feature_store.py  test_schemas.py
(+51 files in other folders)
