# ===============================
# RayScaleML pyproject.toml
# ===============================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rayscale-ml"
version = "0.1.0"
description = "End-to-end distributed ML platform using Ray, optimized for Apple Silicon (M-series)."
authors = [
    {name = "Bhaskar Boruah", email = "boruah.bhaskar@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"

[project.dependencies]
python-dotenv = ">=1.0.0"
pydantic = ">=2.5.0"
pyyaml = ">=6.0.1"
loguru = ">=0.7.2"
ray = ">=2.9.0"
numpy = ">=1.26.0"
pandas = ">=2.1.0"
pyarrow = ">=14.0.1"
scikit-learn = ">=1.3.2"
torch = ">=2.1.0"
torchvision = ">=0.16.0"
tensorflow = ">=2.14.0"
tensorflow-metal = ">=1.1.0"
mlflow = ">=2.8.0"
fastapi = ">=0.104.0"
uvicorn = ">=0.24.0"
pytest = ">=7.4.3"
black = ">=23.10.0"
ruff = ">=0.1.6"
mypy = ">=1.7.0"
pytest-cov = ">=4.1.0"

# -------------------------------
# Black code formatter config
# -------------------------------
[tool.black]
line-length = 88
target-version = ["py310"]
skip-string-normalization = true

# -------------------------------
# Ruff linter config
# -------------------------------
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = []
per-file-ignores = { "__init__.py" = ["F401"] }

# -------------------------------
# Mypy type checker config
# -------------------------------
[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
strict = true
warn_unused_configs = true
show_error_codes = true
